# homelab

./: .sops.yaml  LICENSE  renovate.json
.github/: renovate.json5
.github/renovate/: allowed-versions.json5  custom-managers.json5  package-rules.json5
.github/workflows/: bird-docker-image.yml  cdktf-backup.yml  cdktf.yml  cloudflare-ddns-docker-image.yml  cloudnative-pgvecto_rs-docker-image.yml  docker-image.yml  flux-local.yml
bootstrap/: README.md  devices.json
cloud/backup/: .npmignore  cdk.json  package-lock.json  package.json
cloud/backup/lib/: app.ts
cloud/cdktf/: cdktf.json  eslint.config.mjs  package-lock.json  package.json
cloud/cdktf/lib/: app.ts
clusters/home/apps/: apps.yml
clusters/home/charts/: bitnami.yml  external-dns.yml  hajimari.yml  traefik.yml
clusters/home/flux-system/: gotk-components.yaml  gotk-sync.yaml
clusters/home/ingress/: caddy.yml  traefik.yml
clusters/home/jellyfin/: deployment.yml  service-autodiscovery.yml  service.yml  volumes.yml
containers/bird/: Dockerfile  README.md
containers/cloudflare-ddns/: .dockerignore  .gitignore  Dockerfile  README.md  cloudflare_ddns.py  pyproject.toml  requirements.txt
containers/cloudflare-ddns/src/cloudflare_ddns/: environment.py  main.py  utils.py
containers/cloudflare-ddns/src/cloudflare_ddns/services/: cloudflare_adapter.py  external_ip.py
containers/cloudflare-ddns/tests/: conftest.py  test_cloudflare_ddns.py
containers/cloudflare-ddns/tests/fixtures/: mock_cloudflare.py  mock_external_ip.py
containers/cloudnative-pgvecto.rs/: README.md  versions.yml
(+245 files in other folders)
